--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -27,6 +27,7 @@
         <span class="dismiss">🗙</span>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
             <script>
                 window.scrollToEditSection = function() {
                     var el = document.getElementById('edit-section');
